gobmkida/g0/find_worm_threats
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_worm_threats/src/engine/worm.c:1352:32: error: use of undeclared identifier 'libs_0'
liberties = findlib( str, 241, libs_0); 
                               ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_worm_threats/src/engine/worm.c:1355:6: error: use of undeclared identifier 'libs_0'
aa = libs_0[k]; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_worm_threats/src/engine/worm.c:1368:6: error: use of undeclared identifier 'libs_0'
bb = libs_0[k] + delta[l]; 
     ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_worm_threats/src/obj/1/worm.o] Error 1
